--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Brontosaurus</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+    </head>
+    <body style="background: url('https://brontosaurus.leonardini.dev/logo.svg'); background-size: auto 80%; background-position: center center; background-repeat: no-repeat; height: 100vh; width: 100vw;">
+
+    </body>
+</html>
