--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title></title>
     </head>
-    <body style="background: url('https://brontosaurus.leonardini.dev/logo.svg'); background-size: auto 80%; background-position: center center; background-repeat: no-repeat; height: 100vh; width: 100vw;">
+    <body style="background: url('https://brontosaurus.leonardini.dev/logo.svg'); background-size: auto 70%; background-position: center center; background-repeat: no-repeat; height: 100vh; width: 100vw; margin: 0; padding: 0;">
 
     </body>
 </html>
