--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122485665-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-122485665-2');
+</script>
+
+
         <meta charset="utf-8">
-        <title></title>
+        <title>Brontosaurus</title>
     </head>
     <body style="background: url('https://brontosaurus.leonardini.dev/logo.svg'); background-size: auto 70%; background-position: center center; background-repeat: no-repeat; height: 100vh; width: 100vw; margin: 0; padding: 0; cursor: pointer;" onclick="window.location.href='https://github.com/LorenzoLeonardini/Brontosaurus';">
 
