--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body style="background: url('https://brontosaurus.leonardini.dev/logo.svg'); background-size: auto 70%; background-position: center center; background-repeat: no-repeat; height: 100vh; width: 100vw; margin: 0; padding: 0; cursor: pointer;" onclick="window.location.href='https://github.com/LorenzoLeonardini/Brontosaurus';">
 
 
-	<div style="background: rgb(51, 51, 51); color: #f0f0f0; padding: 15px 50px 15px 50px">
+	<div style="font-family: arial; position: fixed; bottom: 0; left: 0; background: rgb(51, 51, 51); color: #f0f0f0; padding: 15px 50px 15px 50px">
 		This site saves small pieces of text information (cookies) on your device in order to deliver better content and for statistical purposes. You can disable the usage of cookies by changing the settings of your browser. By browsing this website without changing the browser settings you grant us permission to store that information on your device.
 	<div>
 	</body>
